2006-11-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, configure.ac, doc/local/authors.doc,
	itpp/base/logexpfunc.h, itpp/config_msvc.h: New `log_add()'
	function implemented, which calculates safely the following
	expression: log(exp(log_a) + exp(log_b)). Thanks to Conrad
	Sanderson for his patches.

2006-10-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Developers Thomas Lemaire and
	Anders Persson retired.

	* doc/local/index.doc.in, doc/local/itpp_footer.html,
	doc/local/itpp_header.html: Main documentation page layout
	redesigned (should look better in higher resolutions).

2006-10-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/converters.cpp, itpp/base/logexpfunc.h,
	itpp/base/matfunc.h, itpp/base/specmat.cpp, itpp/comm/channel.cpp,
	itpp/comm/modulator.cpp, itpp/comm/modulator.h,
	itpp/comm/modulator_nd.cpp, itpp/signal/sigfun.cpp,
	itpp/signal/transforms.cpp, itpp/srccode/vq.h,
	tests/convcode_test.cpp: Function `needed_bits()' marked as
	deprecated, because its name was a bit misleading (see bug
	[1480535]). Instead of it the following two functions were added:
	`int2bits()' and `levels2bits()'. The first one returns the number
	of beed required for representing an unsigned integer, e.g.
	"int2bits(0) = 1", "int2bits(2) = 2". The latter one returns the
	number of bits to code a certain, positive number of values
	(levels). For example: "levels2bits(1) = 1", "levels2bits(2) = 1".

2006-10-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc, doc/local/installation.doc,
	INSTALL: Documentation improvements and author list update.

	* configure.ac: Building of the static library disabled for
	systems that support shared libraries.

	* configure.ac, itpp-config.in, itpp.pc.in: Cleaned up the
	detected library flags necessary to link with static libraries.

2006-10-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>
